# tooling-asfswhid

./: .asf.yaml  .gitignore  Cargo.toml  NOTES.md  NOTICE  README.md  example_usage.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
python/asfswhid/: __init__.py
src/: lib.rs
swhid-rs/: .gitignore  Cargo.toml  README.md
swhid-rs/docs/: user-guide.md
swhid-rs/src/: directory.rs  git.rs  git_gix.rs  lib.rs  main.rs  permissions.rs  utils.rs
swhid-rs/tests/: git.rs  git_gix.rs  revision.rs
tests/: test_asfswhid.py  test_conformance.py
