[package]
name = "asfswhid"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Python bindings for the swhid-rs SWHID v1.2 reference implementation"
repository = "https://github.com/apache/tooling-asfswhid"

[lib]
name = "asfswhid"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
swhid = { path = "swhid-rs", features = ["gitoxide"] }
# Needed for ObjectId type in revision/release functions
gix = { version = "0.83", optional = true, default-features = false, features = ["sha1"] }

[features]
default = ["gitoxide"]
git = ["swhid/git"]
gitoxide = ["swhid/gitoxide", "dep:gix"]
